Bugfix for charts not showing when combined with loading message

--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -35,6 +35,7 @@ timeline-event {
 /* Charts styling: fullscreen charts */
 .chart-container { height: 100%; }
 .chart-container > .scroll { height: 100%; }
+svg.chart { display: none; }
 
 /* Charts styling: tooltips on top */
 .d3-tip { z-index: 10; }
